syntax = "proto3";
package Protocol;

import "Enum.proto";
import "Struct.proto";


message C_LOGIN
{
	string id = 1;
	string pass = 2;
}

message S_LOGIN
{
	bool success = 1;
	repeated PlayerInfo players = 2; //repeated = vector ÀÇ¹Ì
}

message C_ENTER_GAME
{
	uint64 playerIndex = 1;
}

message S_ENTER_GAME
{
	bool success = 1;
	PlayerInfo player = 2;
}

message C_LEAVE_GAME
{

}

message S_LEAVE_GAME
{

}

message S_SPAWN
{
	repeated PlayerInfo players = 1;
}

message S_DESPAWN
{
	repeated uint64 object_ids = 1;
}

message C_CHAT
{
	string msg = 1;
}

message S_CHAT
{
	uint64 playerId = 1;
	string msg = 2;
}

message C_HELLOWORLD
{
	string mes = 1;
}